--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ nav {
 #menu {
     font-size: 100%;
     list-style-type: none;
-    letter-spacing: 2px;
+    line-height:25px;
 }
 
 .active {
@@ -159,17 +159,6 @@ nav {
 
 /* HOME PAGE Content */
 
-/*
-#quote-home {
-    background-color: rgba(255, 255, 255, 0.7);
-    text-align: center;
-    /*position: absolute;*/
-    /*margin-top: 350px;
-    width: 100%;
-    min-height: 150px;
-    /*padding: 50px 0;
-}*/
-
 #quote-home {
     text-align: center;
     padding: 140px 0;
@@ -184,9 +173,7 @@ nav {
 
 #quote-home > p {
     font-size: 110%;
-    /*line-height: 15px;*/
     text-wrap: wrap;
-   /* padding: 0 50px;*/
 }
 
 #benefits-text, #roots-text, #journey-text {
@@ -196,7 +183,6 @@ nav {
     top: 50%;
     bottom:50%;
     text-align: center;
-   /*line-height: 25px;*/
 }
 
 #benefits-text > ul {
@@ -493,39 +479,7 @@ footer {
         position: fixed;
     }
 
-    #definition {
-        font-size: 80%;
-        position: fixed;
-        text-transform: lowercase;
-        margin-top: 65px;
-        padding: 5px 3px;
-        display: flex;
-        align-items: baseline;
-        justify-content: space-between;
-        flex-direction: row;
-    }
-
-    #menu {
-        font-size: 110%;
-        list-style-type: none;
-        letter-spacing: 4px;
-    }
-    
-    #menu > li {
-        margin-bottom: 1em;
-    
-    }
-    
-    .active {
-        border-bottom: 1px solid #3a3a3a;
-    }
-    
-    /* Nav bar styles with toggle drop down menu*/
-    /* Nav toggle*/
-
-    #nav-toggle {
-        display: none;
-    }
+  /* Navigation menu */
     
     .nav-toggle-label {
         font-size: 2rem;
@@ -551,20 +505,10 @@ footer {
     }
 
     #quote-home > h4 {
-        font-size: 100%;
         padding: 0 25px;
     }
 
-    #quote-home > p, #roots-text > p, #journey-text > p  {
-        font-size: 90%;
-        padding: 0 25px;
-    }
-
-    #benefits-text, #roots-text, #journey-text {
-        font-size: 90%;
-    }
-
-    #benefits-text > ul {
+    #quote-home > p, #roots-text > p, #journey-text > p, #benefits-text > ul {
         padding: 0 25px;
     }
 
@@ -609,9 +553,6 @@ footer {
     }
 
     /* TECHNIQUES CONTENT */
-    #getting-started-text, #postures-introduction {
-        background-color: rgba(255, 255, 255, 0.8);
-    }
 
     #getting-started-text > h4, #postures-introduction > h4 {
         font-size: 120%;
@@ -643,7 +584,6 @@ footer {
     }
 
     #techniques-text > ul {
-        font-size: 95%;
         list-style-type: none;
     }
 
@@ -661,7 +601,7 @@ footer {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        padding: 5px 25px;
+        padding: 15px 25px;
     }
 
 }
@@ -671,25 +611,16 @@ footer {
 
 @media screen and (min-width: 768px) {
     
-            /* Header */
-            nav {
-                display: block;
-                position: relative;
-                box-shadow: none;
-                width: fit-content;
-                padding-right: 1rem;
-            }
+    /* Navigation menu */
     
-            #menu {
-                display: flex;
-            }
+    .nav-toggle-label {
+        font-size: 2rem;
+        position: relative;
+        padding: 40px 30px;
+    }
     
-            #menu>li {
-                padding-left: 1rem;
-            }
-            .nav-label {
-                display: none;
-            }
+    /*HOME PAGE*/
+
     
         }
 
