Uncomment style.css definition id

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,10 +86,10 @@ nav {
     text-transform: lowercase;
     margin-top: 70px;
     padding: 5px 10px;
-    /*display: flex;
+    display: flex;
     align-items: baseline;
     justify-content: space-between;
-    flex-direction: row;*/
+    flex-direction: row;
 }
 
 /* Home Page */
