--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,8 +162,8 @@ nav {
 
 #quote-home {
     text-align: center;
-    padding: 140px 0;
-    margin-top: 200px;
+    padding: 100px 30px;
+    margin-top: 120px;
     background-color: rgba(255, 255, 255, 0.7);
     position: relative;
 }
@@ -192,6 +192,7 @@ nav {
     justify-content: space-around;
     flex-direction: column;
     line-height: 30px;
+    list-style-type: none;
 }
 
 #roots > p, #journey-text > p {
@@ -247,28 +248,28 @@ nav {
     align-items: center;
 }
 
-#postures-image {
+.postures-image {
     max-width: 50%;
 }
 
-#postures-a, #postures-b {
+.postures-text-right, .postures-text-left {
     max-width: 50%;
     padding: 0 25px;
 }
 
-#postures-a > h4, #postures-b > h4 {
+.postures-text-right h4, .postures-text-left h4 {
     font-size: 200%;
 }
 
-#postures-a > h5, #postures-b > h5 {
+.postures-text-right h5, .postures-text-left h5 {
     font-size: 120%;
 }
 
 /* TECHNIQUES PAGE */ 
 
-main {
+/*main {
     flex: 1 0 auto;
-}
+} */
 
 .getting-started  {
     /*main image*/
@@ -353,7 +354,7 @@ main {
     padding: 0 15px;
 }
 
-#techniques-title {
+.techniques-title {
     text-align: center;
     font-size: 200%;
     background-color: rgba(255, 255, 255, 0.8);
@@ -361,33 +362,34 @@ main {
     text-decoration-line: underline;
 }
 
-#techniques-text {
+.techniques-text {
     text-wrap: wrap;
     width: 25%;
     text-align: center;
     line-height: 30px;
 }
 
-#techniques-text > h5 {
+.techniques-text h5 {
     font-size: 150%;
     text-decoration: underline;
 }
 
-#techniques-text > h6 {
+.techniques-text h6 {
     font-size: 120%;
 }
 
-#techniques-text > ul {
+.techniques-text ul {
     padding: 0 25px;
+    list-style-type: none;
 }
 
 /*SIGN UP PAGE*/
 
-main {
+/*main {
     flex: 1 0 auto;
     display: flex;
     flex-direction: column;
-}
+} */
 
 #sign-up {
     color: #401c04;
@@ -482,19 +484,21 @@ footer {
   /* Navigation menu */  
 
     nav {
-        font-size: 90%;
-        background-color: #de8e8a;
+        font-size: 100%;
         position: absolute;
+        width: 28%;
+        padding: 0 45px 0 0;
+        margin-right: 5px;
+        text-align: right;
     }
 
     #menu {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        text-align: right;
-        padding: 15px 20px;
         line-height: 20px;
         top: 40px;
+        right: 0;
     }
  
     
@@ -513,6 +517,11 @@ footer {
         background-position: left;
         background-repeat: no-repeat;
         background-size: cover;
+    }
+
+    #quote-home {
+        margin-top: 130px;
+        padding-top: 140px;
     }
 
     #quote-home > h4 {
@@ -546,26 +555,26 @@ footer {
         align-items: center;
     }
 
-    #postures-image {
+    .postures-image {
         max-width: 100%;
     }
 
-    #postures-a, #postures-b {
+    .postures-text-right, .postures-text-left {
         max-width: 100%;
         padding: 0 25px;
     }
 
-    #postures-a > h4, #postures-b > h4 {
+    .postures-text-right h4, .postures-text-left h4 {
         font-size: 150%;
     }
 
-    #postures-a > h5, #postures-b > h5 {
+    .postures-text-right h5, .postures-text-left h5 {
         font-size: 100%;
     }
 
     /* TECHNIQUES CONTENT */
 
-    #getting-started-text > h4, #postures-introduction > h4 {
+    #getting-started-text > h4, .postures-text-left h4 {
         font-size: 120%;
     }
 
@@ -574,27 +583,26 @@ footer {
         align-items: center;
     }
 
-    #techniques-title {
+    .techniques-title {
         font-size: 150%;
     }
 
-    #techniques-text {
+    .techniques-text {
         text-wrap: wrap;
-        width: 100%;
+        min-width: 100%;
         text-align: center;
         font-size: 95%;
-        padding: 0 25px;
     }
 
-    #techniques-text > h5 {
+    .techniques-text h5 {
         font-size: 130%;
     }
 
-    #techniques-text > h6 {
+    .techniques-text h6 {
         font-size: 110%;
     }
 
-    #techniques-text > ul {
+    .techniques-text ul {
         list-style-type: none;
     }
 
@@ -628,6 +636,8 @@ footer {
         font-size: 90%;
         background-color: #de8e8a;
         position: absolute;
+        padding: 0 45px 0 0;
+        margin-right: 5px;
       }
     
     #menu {
@@ -635,7 +645,7 @@ footer {
         flex-direction: column;
         align-items: flex-start;
         text-align: right;
-        padding: 8px 20px;
+        padding-left: 5px;
         line-height: 25px;
         top: 35px;
     }
@@ -654,6 +664,11 @@ footer {
         background-position: left;
         background-repeat: no-repeat;
         background-size: cover;
+    }
+
+    #quote-home {
+        margin-top: 130px;
+        padding-top: 140px;
     }
 
     #quote-home > h4 {
@@ -715,27 +730,26 @@ footer {
         align-items: center;
     }
 
-    #techniques-title {
+    .techniques-title {
         font-size: 150%;
     }
 
-    #techniques-text {
+    .techniques-text {
         text-wrap: wrap;
         width: 100%;
         text-align: center;
         font-size: 95%;
-        padding: 0 25px;
     }
 
-    #techniques-text > h5 {
+    .techniques-text h5 {
         font-size: 130%;
     }
 
-    #techniques-text > h6 {
+    .techniques-text h6 {
         font-size: 110%;
     }
 
-    #techniques-text > ul {
+    .techniques-text ul {
         list-style-type: none;
     }
     
