--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,7 +250,7 @@ nav {
 
 .postures-image {
     max-width: 50%;
-    padding: 0 25px;
+    padding: 20px 25px;
 }
 
 .postures-text-right, .postures-text-left {
